# kvs-playground

./: Cargo.toml  README.md
project-1/: Cargo.toml
project-1/src/: lib.rs
project-1/tests/: tests.rs
project-2/: Cargo.toml
project-2/src/: error.rs  kv.rs
project-2/tests/: tests.rs
