[package]
name = "project-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.0.4"
tempfile = "3.0.7"
walkdir = "2.2.7"